add endpoint for adding user
